# lxc-gh-runners

./: .gitignore  .release-please-manifest.json  CLAUDE.md  LICENSE  README.md  flake.nix  release-please-config.json
.github/workflows/: ci.yml
controller/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  spike-notes.md
controller/src/controller/: config.py  db.py  github.py  main.py  proxmox.py  reconciler.py  webhook.py  worker.py
controller/tests/: conftest.py  test_config.py  test_db.py  test_e2e.py  test_github.py  test_main.py  test_proxmox.py  test_reconciler.py  test_webhook.py  test_worker.py
docs/superpowers/plans/: 2026-04-26-controller-service.md  2026-04-26-template-builder.md  2026-04-27-controller-release-automation.md
docs/superpowers/specs/: 2026-04-26-controller-service-design.md  2026-04-26-template-builder-design.md  2026-04-27-controller-release-design.md  2026-04-27-readme-design.md
template-builder/: README.md  build-runner-template.sh
